Remove unnecessary trys/catchs and throws Add SneakyThrows Lombok annotations Remove impl package from tests Fix save Account Role Change URL Post Creato from "post/new' to "post/create" Change Java version from 17 to 21 Change load resource return to Optional return Fix tests Rearrange entries